--- a/source/stylesheets/components/_flex.scss
+++ b/source/stylesheets/components/_flex.scss
@@ -14,6 +14,10 @@
   align-items: center;
 }
 
+.Flex.justifyCenter {
+  justify-content: center;
+}
+
 .Flex.spaceBetween {
   justify-content: space-between;
 }
