--- a/source/stylesheets/components/_img.scss
+++ b/source/stylesheets/components/_img.scss
@@ -1,4 +1,5 @@
 $img-max-width: 264px;
+$img-separator-transform: 90px;
 
 .Img {
   max-width: $img-max-width;
@@ -6,9 +7,6 @@ $img-max-width: 264px;
 
 .Img.separator {
   display: block;
-  margin-bottom: -100%;
 
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: contain;
+  transform: translateY($img-separator-transform);
 }
